--- a/index.html
+++ b/index.html
@@ -136,13 +136,14 @@
                   Program<br> 10:00-20:00
             </h2>
             <h5>
-                Sâmbătă & Duminică <span style="color: rgb(202, 23, 23);font-weight: 550;">Închis</span>
+                Sâmbătă & Duminică <span style="color: rgb(167, 20, 20);font-weight: 550;">Închis</span>
             </h5>
             <h5>
-                Luni-Vineri <span style="color: rgb(32, 179, 88);font-weight: 550;">Deschis</span>  	
+                Luni-Vineri <span style="color: rgb(25, 136, 67);font-weight: 550;">Deschis</span>  	
             </h5>
             <p>
                 Te aștept pe Strd.Crinului, Com.Topraisar, Jud.Constanța.<br>
+                Rezervare la: <span style="color:rgb(57, 97, 158)">0767670847</span>
                
 
 
