--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a class="nav-link" href="#section3">Locație</a>
           </li>  
           <li class="nav-item">
-            <a class="nav-link" href="#1">Contact</a>
+            <a class="nav-link" href="#1">Despre</a>
           </li> 
           <li class="nav-item">
             <a class="nav-link" href="#1"><img src="phone-call.png"></a>
